# soroban-keeper-network

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENTS.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/backlog/: README.md  push.sh
.github/backlog/issues/: 0001-fee-bps-default-mismatch.md  0002-cancel-task-cei-violation.md  0003-expire-task-cei-violation.md  0004-execute-task-drops-proof.md  0005-ttl-shorter-than-deadline-strands-escrow.md  0006-validate-lock-and-ttl-parameters.md  0007-bound-calldata-size.md  0008-not-initialized-error.md  0009-replace-panicking-expects.md  0010-emit-event-set-min-reward.md  0011-emit-event-sweep-fees.md  0012-emit-event-upgrade.md  0013-emit-event-initialize.md  0014-extend-deadline-missing-pause-guard.md  0015-extend-instance-ttl-on-mutations.md  0016-keeper-can-squat-task-by-reclaiming.md  0017-readme-event-table-mismatch.md  0018-cancel-claimed-task-after-lock-expiry.md  0019-get-task-batch-view.md  0020-document-fee-rounding.md  0021-test-fund-conservation-invariant.md  0022-test-increase-reward-terminal-states.md  0023-test-expire-claimed-task-refunds-owner.md  0024-test-fee-bps-boundaries.md  0025-test-transfer-admin-requires-both-auths.md  0026-test-withdraw-accumulation.md  0027-test-lock-expiry-boundary.md  0028-test-sweep-fees-input-validation.md  0029-test-pause-policy-matrix.md  0030-add-coverage-tooling.md  0031-bot-balance-read-via-signed-transaction.md  0032-bot-rescans-same-ledger-window.md  0033-bot-hardcoded-base64-topic-filters.md  0034-bot-check-is-claimable-before-claiming.md  0035-bot-profitability-check.md  0039-bot-once-flag.md  (+14 more)
.github/workflows/: ci.yml  labels.yml  pr-hygiene.yml  release.yml
contracts/keeper-registry/: Cargo.toml
contracts/keeper-registry/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYING.md
examples/keeper-bot/: .env.example  eslint.config.js  index.js  package-lock.json  package.json
scripts/: deploy.sh  optimize.sh
